@@ -17,10 +17,10 @@ define( function( require ) {
    * @param {Faucet} faucet
    * @param {Property<Color>} colorProperty
    * @param {Number} height in model coordinates
-   * @param {ModelViewTransform2} mvt
+   * @param {ModelViewTransform2} modelViewTransform
    * @constructor
    */
-  function FaucetFluidNode( faucet, colorProperty, height, mvt ) {
+  function FaucetFluidNode( faucet, colorProperty, height, modelViewTransform ) {
 
     var thisNode = this;
     Rectangle.call( thisNode, 0, 0, 0, 0, { lineWidth: 1, pickable: false } );
@@ -35,14 +35,14 @@ define( function( require ) {
      * Set the width of the shape to match the flow rate.
      * @param {Number} flowRate
      */
-    var viewLocation = mvt.modelToViewPosition( faucet.location );
-    var viewHeight = mvt.modelToViewDeltaY( height );
+    var viewLocation = modelViewTransform.modelToViewPosition( faucet.location );
+    var viewHeight = modelViewTransform.modelToViewDeltaY( height );
     faucet.flowRateProperty.link( function( flowRate ) {
       if ( flowRate === 0 ) {
         thisNode.setRect( 0, 0, 0, 0 ); // empty rectangle
       }
       else {
-        var viewWidth = mvt.modelToViewDeltaX( faucet.spoutWidth * flowRate / faucet.maxFlowRate );
+        var viewWidth = modelViewTransform.modelToViewDeltaX( faucet.spoutWidth * flowRate / faucet.maxFlowRate );
         thisNode.setRect( viewLocation.x - (viewWidth / 2), viewLocation.y, viewWidth, viewHeight );
       }
     } );
